--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@fortawesome/fontawesome-svg-core": "^7.1.0",
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
     "@fortawesome/react-fontawesome": "^3.1.1",
-    "@mantine/carousel": "^8.3.9",
     "@mantine/core": "^8.3.9",
     "@mantine/hooks": "^8.3.9",
     "@tabler/icons-react": "^3.35.0",
@@ -28,9 +27,11 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
+    "react-slick": "^0.31.0",
     "react-tsparticles": "^2.12.2",
     "sass": "^1.94.2",
     "simple-icons": "^16.0.0",
+    "slick-carousel": "^1.8.1",
     "tsparticles": "^3.9.1"
   },
   "devDependencies": {
@@ -38,6 +39,7 @@
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
+    "@types/react-slick": "^0.23.13",
     "@vitejs/plugin-react": "^5.1.1",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
